fix: controls on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,3 @@
 .my-controls {
-  @apply flex flex-row-reverse items-center space-x-reverse space-x-2 md:flex-row md:space-x md:space-x-2;
+  @apply flex flex-col items-end space-y-2 md:flex md:flex-row md:space-x-2 md:space-y-0;
 }
